--- a/index.html
+++ b/index.html
@@ -9,16 +9,21 @@
     <meta name="robots" content="index, follow">
     <meta property="og:title" content="Maryam Olaitan | Minimalist Web Developer Portfolio">
     <meta property="og:description" content="Minimalist web developer crafting clean, conversion-focused websites that strengthen brands, delight users, and drive results.">
-    <meta property="og:image" content="https://maryam.dev.vercel.app/maryam olaitan.jpg">
-    <meta property="og:url" content="https://maryam.dev.vercel.app">
+    <meta property="og:image" content="https://maryamdev.vercel.app/maryam olaitan.jpg">
+    <meta property="og:url" content="https://maryamdev.vercel.app">
     <meta property="og:type" content="website">
-
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Maryam | Minimalist Web Developer Portfolio">
+    <meta name="twitter:description" content="Minimalist web developer crafting clean, conversion-focused websites that strengthen brands, delight users, and drive results.">
+    <meta name="twitter:image" content="https://maryamdev.vercel.app/maryam olaitan.jpg">
     <title>Maryam Olaitan | Minimalist Website Developer Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="images/maryam olaitan.jpg" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sour+Gummy:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;500&family=Montserrat:wght@600;700&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <header>
@@ -97,4 +102,5 @@
         else{menuList.style.maxHeight = '0px';}
     }
 </script>
+
 </html>
