--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
     <meta name="robots" content="index, follow">
     <meta property="og:title" content="Maryam Olaitan | Minimalist Web Developer Portfolio">
     <meta property="og:description" content="Minimalist web developer crafting clean, conversion-focused websites that strengthen brands, delight users, and drive results.">
-    <meta property="og:image" content="https://maryamdev.vercel.app/maryam olaitan.jpg">
+    <meta property="og:image" content="https://maryamdev.vercel.app/maryam olaitan.ico">
     <meta property="og:url" content="https://maryamdev.vercel.app">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Maryam | Minimalist Web Developer Portfolio">
     <meta name="twitter:description" content="Minimalist web developer crafting clean, conversion-focused websites that strengthen brands, delight users, and drive results.">
-    <meta name="twitter:image" content="https://maryamdev.vercel.app/maryam olaitan.jpg">
+    <meta name="twitter:image" content="https://maryamdev.vercel.app/maryam olaitan.ico">
     <title>Maryam Olaitan | Minimalist Website Developer Portfolio</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="images/maryam olaitan.jpg" type="image/x-icon">
+    <link rel="icon" href="images/maryam olaitan.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sour+Gummy:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -104,5 +104,6 @@
 </script>
 
 </html>
+
 
 
