--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <h2>Let us create something amazing together.</h2> 
             <p>Have a project in mind? Fill out the form below, and I'll get back to you.</p>
             <div >
-                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe18ealAZEfrrG9CN6fLmB1qDidaB-1CVnUGYCY73828NRYRQ/viewform?embedded=true" width="640" height="1376" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe18ealAZEfrrG9CN6fLmB1qDidaB-1CVnUGYCY73828NRYRQ/viewform?embedded=true" width="640" height="1376" frameborder="0" marginheight="0" marginwidth="0" class="form">Loading…</iframe>
                 <div class="gallery">
                     <img src="images/Ajala-Jalingo-Design-by-Maryam-Olaitan(iPhone 6-7-8 plus).png" alt="">
                     <img src="images/Mooto-Design-by-Maryam-Olaitan(iPhone_5_SE).png" alt="">
@@ -104,6 +104,7 @@
 </script>
 
 </html>
+
 
 
 
