--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <meta name="robots" content="index, follow">
     <meta property="og:title" content="Maryam Olaitan | Minimalist Web Developer Portfolio">
     <meta property="og:description" content="Minimalist web developer crafting clean, conversion-focused websites that strengthen brands, delight users, and drive results.">
-    <meta property="og:image" content="https://maryam.dev.vercel.app/maryam olaitan.jpg">
+    <meta property="og:image" content="https://maryam.dev.vercel.app/images/maryam olaitan (1).ico">
     <meta property="og:url" content="https://maryam.dev.vercel.app">
     <meta property="og:type" content="website">
 
     <title>Maryam Olaitan | Minimalist Website Developer Portfolio</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="images/maryam olaitan.jpg" type="image/x-icon">
+    <link rel="icon" href="images/maryam olaitan (1).ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
@@ -100,4 +100,5 @@
         else{menuList.style.maxHeight = '0px';}
     }
 </script>
+
 </html>
