--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:image" content="https://maryam.dev.vercel.app/images/maryam olaitan (1).ico">
     <meta property="og:url" content="https://maryam.dev.vercel.app">
     <meta property="og:type" content="website">
-
+    <meta name="google-site-verification" content="jCi6_Re2JKaOlsRjwWVJISfTvEALxkVdCt9y0InA1Zk"/>
     <title>Maryam Olaitan | Minimalist Website Developer Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="images/maryam olaitan (1).ico" type="image/x-icon">
@@ -102,3 +102,4 @@
 </script>
 
 </html>
+
